test/spec_vectors/load64/fail/module_28.wat
(module (memory i64 1) (func (result i32) (i32.load (f32.const 0))))